@@ -13,9 +13,6 @@
 
 class KAudio;
 
-const char PVERSION[] = "0.4.1";
-const char PDATE[] = "02/21/97";
-
 typedef enum _cardtype { // I don't use this anymore. But it helps to understand the numbers :)
 	        DECK=0,
 	        CA=1,SA=2,HA=3,DA=4,
